# luckycharm

./: .gitignore  0_session_quality_control.py  1_data_set_curation.ipynb  1a_session_processing_pre_meta_change.ipynb  1b_session_processing_post_meta_change.ipynb  1c_session_consolidation.ipynb  2_events_processing.py  3_events_stitching.py  3_events_stitching_combined.py  4_lick_detection.py  4_session_analysis.py  4_session_analysis_combined.py  4_session_log_update.py  4_trials_analysis.py  5_session_stats.py  5_trials_analysis.py  6_data_cleaning.ipynb  6_data_cleaning.py  7_LMEM.ipynb  8_HMM.py  README.md  __init__.py  analysis_plots_v1.ipynb  analysis_plotting_exp2_c567 copy.ipynb  analysis_plotting_exp2_c567.ipynb  analysis_plotting_exp2_c7.ipynb  behavior_modeling.ipynb  debug.ipynb  delta_t_analysis.py  environment.yml  exp_cohort_info.json  function_organization.md  hazard.ipynb  helper_analysis_summary.md  helper_common.py  helper_common_new.py  helper_post.py  lick_bout_plots.ipynb  photometry_analysis.ipynb  processing_helper_0827.py  (+21 more)
.ipynb_checkpoints/: behavior_analysis_session-checkpoint.ipynb
cohort_1/: analysis_plotting_c1.ipynb  analysis_session_c1.ipynb  analysis_session_v1.ipynb  analysis_stats.ipynb  behavior_analysis_helper_functions.py  behavior_analysis_helper_functions_new.py  behavior_analysis_session.ipynb  behavior_analysis_session_new.ipynb  behavior_analysis_trial.ipynb  behavioral_analysis.ipynb
cohort_2/: analysis_plotting_helper_functions.py  analysis_session_helper_functions_v2.py  analysis_session_v1.ipynb  (+1 more)
cohort_4/: utils_new.py  (+3 more)
(+53 files in other folders)
