[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "luckycharm"
version = "0.0.1"
description = "RZ behavior analysis package (luckycharm)"
readme = "README.md"
requires-python = ">=3.8"
authors = [ { name = "Rebekah Zhang" } ]
license = { text = "MIT" }
